add cv suggest mode